learning html day 2

--- a/htmlCss/index.html
+++ b/htmlCss/index.html
@@ -1,5 +1,5 @@
 <!-- I am on my way to become web developer -->
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <title>My first web page</title>
@@ -7,9 +7,9 @@
     <body>
         <p>This is a paragraph tag.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum impedit nobis enim commodi quis repellat ducimus! Cupiditate ducimus natus at nesciunt consequatur sunt omnis deserunt tenetur aliquam, odit numquam error!</p>
-        <!-- <p>lorem*20</p> -->
+        <p>lorem*20</p> -->
          <!-- headings in html -->
-        <h1>Headings</h1>
+        <!-- <h1>Headings</h1>
         <h2>Headings</h2>
         <h3>Headings</h3>
         <h4>Headings</h4>
@@ -33,12 +33,37 @@
 
         <h1>Building exceptional<br>software teams with<br>Codebase</h1>
         <hr>
-        <p>This is a tagline</p>
+        <p>This is a tagline</p> -->
         <!-- <p>This message is a formal reminder for you all regarding our Q    FORM to ensure the best support possible.<br>We are here to assist you with all your queries—whether tech-related or non-tech.<br>For a smooth and efficient experience, please use the below attached form</p> -->
-       <pre>    Hii, I am Prajwal Katakpure
+       <!-- <pre>    Hii, I am Prajwal Katakpure
     I am a student at Geekster.
     I want to be a web developer.
-        </pre>
+        </pre> -->
+        <p>Prajwal</p><p>Katakpure</p>
+        <img src="images/thor.jpg" alt="thor with hammer" width="">
         
+        <!-- colspan, rowspan, cellpadding, cellspacing -->
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td rowspan="2">Prajwal Katakpure</td>
+                    <td rowspan="2">pkatakpure@gmail.com</td>
+                    <td>8746573545</td>
+                </tr>
+                    <td>8899776655</td>
+                <tr>
+                   <td>Saloni Katakpure</td>
+                   <td>salonikatakpure@gamil.com</td>
+                   <td>8765432588</td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
