learning css day 2

--- a/htmlCss/cssSelectors.html
+++ b/htmlCss/cssSelectors.html
@@ -1,12 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--Meta tags gives the information about the data we are putting on our website -->
+    <!--Meta tags gives the information about the data we are putting on our website
+    - It doesnt help in developing website
+    - but imp for SEO -->
     <meta charset="UTF-8">
+    <meta name="keywords" content="twitter,instagram,facebook">
+    <meta name="description" content="logo of twitter has changed after musk">
+    <!--viewport suggest the view of website on device
+       as content declares width=device-width it will take width of device -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!--initial scale=1.0 tells that our website will open in the aspect ratio in which it was built  -->
+    <title>CSS Selectors</title>
+    <link rel="stylesheet" href="cssSelectors.css">
 </head>
 <body>
-    
+
+    <div id="wrapper">
+        <!-- <header>
+
+           <div class="top">
+            <p>Writing something dummy.</p>
+            
+            <h1>Heading</h1> 
+            <section>
+                <ul>
+                    <h1>Heading inside section & ul</h1>
+                </ul>
+                <h1>Heading 2</h1> 
+            </section> 
+            <ul>
+                <h1>Navigation</h1>
+                <li>Page 1</li>
+                <li>Page 2</li>
+                <li>Page 3</li>
+            </ul>
+           </div>
+        </header> -->
+        <h1>Shahrukh Khan</h1>
+        <p>DDLJ</p>
+        <p>Swades</p>
+        <p>Baazigar</p>
+        <p>Jawan</p>
+
+        <h2>Saif Ali khan</h2>
+        <h3>Salman Khan</h3>
+        <ul>
+            <li>Vicky Kaushal</li>
+        </ul>
+        <h4>Hrithik Roshan</h4>
+        <p>Ranbir Kapoor</p>
+    </div>
+    <!-- <ul id="red"> 
+        <li class=>Apple</li>
+        <li class=>Orange</li>
+        <li class=>Mango</li>
+        <li class=>Banana</li>
+        <li class=>Guava</li>
+    </ul>
+    <ol id="green">
+        <li>Apple</li>
+        <li>Orange</li>
+        <li>Mango</li>
+        <li>Banana</li>
+        <li>Guava</li>
+    </ol>
+    <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Services</li>
+        <li>Contact Us</li>
+    </ul>
+
+    <h2>University of Geekster</h2> -->
 </body>
 </html>
