learning css day 3

--- a/htmlCss/boxSizing.html
+++ b/htmlCss/boxSizing.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Box Sizing</title>
+    <link rel="stylesheet" href="boxSizing.css">
 </head>
 <body>
-    
+    <div class="box">
+        <h2>Box 1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque dignissimos repudiandae quis voluptates facilis, blanditiis consectetur minima sunt nam voluptatum eum vel, praesentium recusandae in harum, nemo nihil. Deserunt, blanditiis.</p>
+    </div>
+    <div class="box"> 
+        <h2>Box 2</h2>
+        <p>Obcaecati voluptates dolore odio qui veniam maiores fuga praesentium dolorum reiciendis, cupiditate, unde placeat eum dicta ipsa cumque temporibus distinctio architecto a odit enim libero aliquam repellendus nisi nostrum. Itaque!</p>
+    </div>
+    <div class="box">
+        <h2>Box 3</h2>
+        <p>Fugiat quod quia, laboriosam amet possimus sed illo explicabo odit voluptatem blanditiis velit labore suscipit illum et debitis delectus quae odio impedit pariatur dolor? Dolore expedita nisi tempore omnis earum?</p>
+    </div>
 </body>
 </html>
